cluster/base/georgi/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: georgi
  namespace: georgi
spec:
  type: ClusterIP
  selector:
    app: georgi
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
    name: http
