cluster/base/georgi/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: georgi
  namespace: georgi
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: traefik
  rules:
  - host: georgi.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: georgi
            port:
              number: 8080
  tls:
  - hosts:
    - georgi.example.com
    secretName: georgi-tls
